Sports_Club_Final/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-sourcepath
/home/codysseus/Sports_Club_Final
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-device.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-core.jar:/home/codysseus/Sports_Club_Final
-d
/home/codysseus/Sports_Club_Final/doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Sports_Club_Final
-windowtitle
Sports_Club_Final
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
/home/codysseus/Sports_Club_Final/Customer.java
/home/codysseus/Sports_Club_Final/CustomerTest.java
/home/codysseus/Sports_Club_Final/sortedArrayList.java
/home/codysseus/Sports_Club_Final/Event.java
/home/codysseus/Sports_Club_Final/Menu.java
/home/codysseus/Sports_Club_Final/MenuTest.java
/home/codysseus/Sports_Club_Final/EventTest.java
/home/codysseus/Sports_Club_Final/SortedArrayListTest.java
<---- end of javadoc command ---->
Loading source file /home/codysseus/Sports_Club_Final/Customer.java...
Loading source file /home/codysseus/Sports_Club_Final/CustomerTest.java...
Loading source file /home/codysseus/Sports_Club_Final/sortedArrayList.java...
Loading source file /home/codysseus/Sports_Club_Final/Event.java...
Loading source file /home/codysseus/Sports_Club_Final/Menu.java...
Loading source file /home/codysseus/Sports_Club_Final/MenuTest.java...
Loading source file /home/codysseus/Sports_Club_Final/EventTest.java...
Loading source file /home/codysseus/Sports_Club_Final/SortedArrayListTest.java...
Constructing Javadoc information...
/home/codysseus/Sports_Club_Final/CustomerTest.java:20: error: cannot find symbol
    private SortedArrayList sortedAr1;
            ^
  symbol:   class SortedArrayList
  location: class CustomerTest
/home/codysseus/Sports_Club_Final/CustomerTest.java:23: error: cannot find symbol
    private SortedArrayList sortedAr2;
            ^
  symbol:   class SortedArrayList
  location: class CustomerTest
/home/codysseus/Sports_Club_Final/SortedArrayListTest.java:20: error: cannot find symbol
    private SortedArrayList sortedAr1;
            ^
  symbol:   class SortedArrayList
  location: class SortedArrayListTest
Standard Doclet version 1.8.0_151
Building tree for all the packages and classes...
Generating /home/codysseus/Sports_Club_Final/doc/Customer.html...
/home/codysseus/Sports_Club_Final/Customer.java:8: warning - @Dimitrios is an unknown tag.
/home/codysseus/Sports_Club_Final/Customer.java:8: warning - @8 is an unknown tag.
/home/codysseus/Sports_Club_Final/Customer.java:101: warning - @param argument "Event" is not a parameter name.
/home/codysseus/Sports_Club_Final/Customer.java:39: warning - @param argument "name1," is not a parameter name.
Generating /home/codysseus/Sports_Club_Final/doc/CustomerTest.html...
Generating /home/codysseus/Sports_Club_Final/doc/Event.html...
/home/codysseus/Sports_Club_Final/Event.java:48: warning - @name is an unknown tag.
Generating /home/codysseus/Sports_Club_Final/doc/EventTest.html...
Generating /home/codysseus/Sports_Club_Final/doc/Menu.html...
Generating /home/codysseus/Sports_Club_Final/doc/MenuTest.html...
Generating /home/codysseus/Sports_Club_Final/doc/sortedArrayList.html...
/home/codysseus/Sports_Club_Final/sortedArrayList.java:8: warning - @Dimitrios is an unknown tag.
/home/codysseus/Sports_Club_Final/sortedArrayList.java:23: warning - @param argument "Object" is not a parameter name.
Generating /home/codysseus/Sports_Club_Final/doc/SortedArrayListTest.html...
Generating /home/codysseus/Sports_Club_Final/doc/package-frame.html...
Generating /home/codysseus/Sports_Club_Final/doc/package-summary.html...
Generating /home/codysseus/Sports_Club_Final/doc/package-tree.html...
Generating /home/codysseus/Sports_Club_Final/doc/constant-values.html...
Generating /home/codysseus/Sports_Club_Final/doc/serialized-form.html...
Building index for all the packages and classes...
Generating /home/codysseus/Sports_Club_Final/doc/overview-tree.html...
Generating /home/codysseus/Sports_Club_Final/doc/index-all.html...
Building index for all classes...
Generating /home/codysseus/Sports_Club_Final/doc/allclasses-frame.html...
Generating /home/codysseus/Sports_Club_Final/doc/allclasses-noframe.html...
Generating /home/codysseus/Sports_Club_Final/doc/index.html...
Generating /home/codysseus/Sports_Club_Final/doc/help-doc.html...
10 warnings
